fix: auto zoom on iphone

--- a/app/globals.css
+++ b/app/globals.css
@@ -121,3 +121,11 @@
     @apply bg-background text-foreground;
   }
 }
+
+@supports (-webkit-touch-callout: none) {
+  input,
+  textarea,
+  select {
+    font-size: 16px;
+  }
+}
